--- a/src/main/java/formularios/FrmPrincipal.form
+++ b/src/main/java/formularios/FrmPrincipal.form
@@ -23,9 +23,10 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" attributes="0">
+          <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="btnOtros" max="32767" attributes="0"/>
                   <Component id="btnCompAereas" pref="388" max="32767" attributes="0"/>
                   <Component id="btnVuelos" alignment="0" max="32767" attributes="0"/>
                   <Component id="btnVuelosDiarios" alignment="1" max="32767" attributes="0"/>
@@ -43,7 +44,9 @@
               <Component id="btnVuelos" min="-2" pref="65" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="btnVuelosDiarios" min="-2" pref="67" max="-2" attributes="0"/>
-              <EmptySpace pref="90" max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="btnOtros" min="-2" pref="70" max="-2" attributes="0"/>
+              <EmptySpace pref="14" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -71,6 +74,14 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnVuelosDiariosActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="btnOtros">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Otras opciones"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnOtrosActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
