--- a/src/main/java/formularios/FrmPrincipal2.form
+++ b/src/main/java/formularios/FrmPrincipal2.form
@@ -50,6 +50,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Salidas"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSalidasActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnVolver">
       <Properties>
