Agregadas las recaudaciones

--- a/src/main/java/formularios/FrmPrincipal2.form
+++ b/src/main/java/formularios/FrmPrincipal2.form
@@ -30,6 +30,7 @@
                   <Component id="btnLlegadas" max="32767" attributes="0"/>
                   <Component id="btnSalidas" alignment="0" pref="388" max="32767" attributes="0"/>
                   <Component id="btnVolver" alignment="1" max="32767" attributes="0"/>
+                  <Component id="btnRecaudaciones" alignment="1" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -44,7 +45,9 @@
               <Component id="btnLlegadas" min="-2" pref="43" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="btnVuelosCompania" min="-2" pref="44" max="-2" attributes="0"/>
-              <EmptySpace pref="109" max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="btnRecaudaciones" min="-2" pref="47" max="-2" attributes="0"/>
+              <EmptySpace pref="56" max="32767" attributes="0"/>
               <Component id="btnVolver" min="-2" pref="40" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -82,6 +85,14 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnVuelosCompaniaActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="btnRecaudaciones">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Recaudaciones"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnRecaudacionesActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
